runall also try to compile src/main.lx

--- a/lx/Makefile
+++ b/lx/Makefile
@@ -6,6 +6,7 @@ $(LX):
 	@cd .. && make
 
 runall: $(LX)
+	$(LX) compile --debug src/main.lx
 	$(LX) run test/stub/ch17.lx
 	$(LX) run test/stub/ch18.lx
 	$(LX) run test/stub/ch19.lx
