--- a/lx/Makefile
+++ b/lx/Makefile
@@ -21,5 +21,5 @@ runall: $(LX)
 	$(LX) run test/stub/sink.lx
 
 test: $(LX)
-	@ls test/*.test.lx | xargs -I{} sh -c "echo {} && $(LX) run --debug {}"
+	@ls test/*.test.lx | xargs -I{} $(LX) run --debug {}
 
