Add spit builtin, mlx compile output, and source disasm support
- Add `spit(path, contents)` native for writing lx output to disk
- Support `-o/--output` in mlx compile (stdout remains default)
- Add `anf_debug` entrypoint for ANF dumps (parse→lower→anf only)
- Allow `lx disasm` to accept .lx sources via embedded compiler args
- Refresh help/usage strings for compile/disasm

--- a/lx/Makefile
+++ b/lx/Makefile
@@ -23,3 +23,6 @@ runall: $(LX)
 test: $(LX)
 	@ls test/*.test.lx | xargs -I{} $(LX) run {}
 
+mlx-smoke: $(LX)
+	$(LX) compile src/main.lx > /dev/null
+	$(LX) run test/stub/ch17.lx
