--- a/lx/Makefile
+++ b/lx/Makefile
@@ -6,7 +6,7 @@ $(LX):
 	@cd .. && make
 
 runall: $(LX)
-	$(LX) compile main.lx > /dev/null || $(LX) run scripts/build-lxlx-driver.lx > /dev/null
+	$(LX) compile main.lx > /dev/null || $(LX) run scripts/bootstrap-codegen.lx main.lx > /dev/null
 	$(LX) run test/stub/ch17.lx
 	$(LX) run test/stub/ch18.lx
 	$(LX) run test/stub/ch19.lx
