Fix ANF grouped inlining and tests
Summary: make grouped ANF inlining order-safe for binary chains, add multi-pass compaction, and broaden safe leaves to literals while avoiding blocks with lets; wire in debugLog + new tests and regenerate embedded headers.

Why hard: locals are stack slots, so inlining blocks with Let can clobber operands; evaluation order must stay left-to-right; ANF nests temps so outer chains only become eligible after inner simplification; object identity vs node IDs caused false mismatches.

Tried: inline call temps directly, allow literal leaves, and relax block guards; this regressed string concat until we blocked blocks with Let and added call/literal tree checks plus multi-pass grouping.

Working now: fib-style call pairs, binary chains (e.g., a+b+c), and literal leaves (a+/+b) without changing runtime semantics.

Not working yet: inlining when temp init blocks contain Lets (skipped for safety); Dot/Index leaves are not enabled.

--- a/lx/Makefile
+++ b/lx/Makefile
@@ -21,5 +21,6 @@ runall: $(LX)
 	$(LX) run test/stub/sink.lx
 
 test: $(LX)
-	@$(LX) run scripts/gen-test-runner.lx > /dev/null
-	@LX_TEST_BATCH=1 $(LX) run ../out/run-all-tests.lx
+	@for file in test/*.test.lx; do \
+		$(LX) run "$$file"; \
+	done
